# GFiles

./: CMakeLists.txt  README.md
include/GFiles/: Directory.hpp  File.hpp  Path.hpp
src/: CMakeLists.txt  Directory.cpp  File.cpp  Path.cpp
tests/test1/: CMakeLists.txt  main.cpp
tests/test2/: CMakeLists.txt  main.cpp
tests/test3/: CMakeLists.txt  main.cpp
